--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>It works !</h1>
+<h1>It works! CS201 Final Project!</h1>
 
 <p>If you're seeing this page via a web browser, it means you've setup Tomcat successfully. Congratulations!</p>
  
