--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="views/calendar.js"></script>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/calendar.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body ng-app="calendar" ng-controller="calendarController">
     <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
