--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Apache Tomcat</title>
+    <title>USCalendar</title>
 
     <!-- full calendar css link -->
     <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css" />
