more modal work

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <!-- imported via jQuery load call -->
         <div id="sidebar"></div>
 
+        <!-- My army of modals -->
         <div id="loginModal" class="modal"></div>
-
+        <div id="uploadModal" class="modal"></div>
         <!-- Calendar module -->
         <!-- This is handled by ui-calendar -->
         <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
