trying to style and fix up modal opening

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
     <script type="text/javascript" src="bower_components/fullcalendar/dist/gcal.js"></script>
 
-    <!-- Font awesome -->
+    <!-- Other front end links -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <!-- calendar front end javascript -->
@@ -26,7 +26,6 @@
     <script type="text/javascript">
         $(function() {
             $("#sidebar").load("partials/sidebar.html");
-            $("#loginModal").load("partials/loginModal.html");
 
             $.getScript("app/modal.js");
         });
@@ -44,8 +43,8 @@
         <div id="sidebar"></div>
 
         <!-- My army of modals -->
-        <div id="loginModal" class="modal"></div>
-        <div id="uploadModal" class="modal"></div>
+        <div id="modal" class="modal"></div>
+
         <!-- Calendar module -->
         <!-- This is handled by ui-calendar -->
         <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
