--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
             $("#sidebar").load("partials/sidebar.html");
 
             $.getScript("app/master.js");
-            $.getScript("app/modal.js");
-            $.getScript("app/login.js");
+//            $.getScript("app/modal.js");
+//            $.getScript("app/login.js");
         });
 
     </script><!-- Custom CSS --><link rel="stylesheet" href="assets/css/styles.css">
