--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
             $.getScript("app/master.js");
             $.getScript("app/modal.js");
-            $.getScript("app/login.js");
+//            $.getScript("app/login.js");
         });
 
     </script><!-- Custom CSS --><link rel="stylesheet" href="assets/css/styles.css">
