--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/styles.css"></link>
     </head>
-    <body ng-app="calendar" ng-controller="calendarCtrl">
+    <body ng-app="calendar" ng-controller="calendarCtrl" id="bodyTagID">
         <div class="container">
 
             <!-- Sidebar module --><!-- imported via jQuery load call -->
