--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="modal" class="modal"></div>
 
             <!-- Calendar module --><!-- This is handled by ui-calendar -->
-            <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+            <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="appCalendar"></div>
         </div>
     </body>
 </html>
