Working on guest mode

--- a/index.html
+++ b/index.html
@@ -28,31 +28,10 @@
         $(function() {
             $("#sidebar").load("partials/sidebar.html");
 
-            $.getScript("app/modal.js");
-            
-            $.get("/user/isLoggedIn", function(resp) {
-                var scope = angular.element($('#bodyTagID')).scope();
-                loadEvents(scope,resp);
-            });
-
-            function loadEvents(scope, resp)
-            {
-                if (JSON.parse(resp).success) {
-                	WebsocketConnection.initialize();
-                    $('#sidebarUser').html(JSON.parse(resp).username);
-                    $.get("/calendar?view=all", function(data) {
-                        if (JSON.parse(data).success) {
-                            var events = JSON.parse(data).events;
-
-                            for (var event in events) {
-                                scope.addEvent(parseServerEvent(events[event]));
-                            }
-
-                            scope.renderCalendar();
-                        }
-                    });
-                }
-            }
+            angular.element($('#bodyTagID')).scope().loggedIn(function() {
+            	$('#sidebarUser').html(JSON.parse(resp).username);
+                angular.element($('#bodyTagID')).scope().loadAllEvents();
+            }, function() {});
 
             function parseServerEvent(event)
             {
@@ -64,7 +43,6 @@
                 delete result.name;
                 delete result.start_time;
                 delete result.end_time;
-
                 return result;
             }
         });
