included the getscript for modal.js

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         $(function() {
             $("#sidebar").load("partials/sidebar.html");
 
+            $.getScript("app/modal.js");
+
             angular.element($('#bodyTagID')).scope().loggedIn(function() {
             	$('#sidebarUser').html(JSON.parse(resp).username);
                 angular.element($('#bodyTagID')).scope().loadAllEvents();
