guest mode frontend

--- a/index.html
+++ b/index.html
@@ -30,22 +30,10 @@
             
             $.getScript("app/modal.js");
 
-            angular.element($('#bodyTagID')).scope().loggedIn(function() {
-                angular.element($('#bodyTagID')).scope().loadAllEvents();
-            }, function() {});
-
-            function parseServerEvent(event)
-            {
-                var result = event;
-                result.title = result.name;
-                result.start = result.start_time;
-                result.end = result.end_time;
-                result.stick = "true";
-                delete result.name;
-                delete result.start_time;
-                delete result.end_time;
-                return result;
-            }
+            angular.element($('#bodyTagID')).scope().loggedIn(
+            		angular.element($('#bodyTagID')).scope().loadAllEvents, 
+            		angular.element($('#bodyTagID')).scope().loadAllEvents
+            );
         });
 
     </script>
