--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-      <title>SCal</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="format-detection" content="telephone=no"/>
+		<meta name="keywords" content="calendar, realtime, friends, sharing, USC, university of southern california, events, classes, collaboration"/>
+		<meta name="description" content="SCal is a realtime web calendar that allows you to combine your USC schedule with other events and find times to collaborate with friends."/>
+		<meta name="copyright" content="Copyright 2016 SCalTech, SWAG."/>
+		<meta property="og:title" content="SCal Web Calendar" />
+		<meta property="og:url" content="http://scal.tech"/>
+		<meta property="og:description" content="SCal is a realtime web calendar that allows you to combine your USC schedule with other events and find times to collaborate with friends." />
+		<meta property="og:image" content="http://scal.tech" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+      <title>SCal Web Calendar</title>
 
       <!-- full calendar css link -->
       <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css" />
